Update MouseHandlerMixin.java